refactor(stepper, drawer, input, tab): update css property naming to convention

--- a/src/components/Drawer/sgds-drawer.scss
+++ b/src/components/Drawer/sgds-drawer.scss
@@ -1,9 +1,9 @@
 :host {
-    --sgds-drawer-padding: 1.5rem;
-    --sgds-drawer-size: 35rem;
-    --sgds-drawer-background-color: white;
-    --sgds-drawer-button-gap: 0.5rem;
-    --sgds-drawer-overlay-background-color: var(--overlay-background-color);
+    --drawer-padding: 1.5rem;
+    --drawer-size: 35rem;
+    --drawer-background-color: white;
+    --drawer-button-gap: 0.5rem;
+    --drawer-overlay-background-color: var(--overlay-background-color);
     display: contents;
   }
 
@@ -29,7 +29,7 @@
     z-index: 2;
     max-width: 100%;
     max-height: 100%;
-    background-color: var(--sgds-drawer-background-color);
+    background-color: var(--drawer-background-color);
     box-shadow: 0 2px 8px hsl(240 3.8% 46.1% / 12%);
     overflow: auto;
     pointer-events: all;
@@ -45,7 +45,7 @@
     bottom: auto;
     inset-inline-start: 0;
     width: 100%;
-    height: var(--sgds-drawer-size);
+    height: var(--drawer-size);
   }
 
   .drawer-end .drawer-panel {
@@ -53,7 +53,7 @@
     inset-inline-end: 0;
     bottom: auto;
     inset-inline-start: auto;
-    width: var(--sgds-drawer-size);
+    width: var(--drawer-size);
     height: 100%;
   }
 
@@ -63,7 +63,7 @@
     bottom: 0;
     inset-inline-start: 0;
     width: 100%;
-    height: var(--sgds-drawer-size);
+    height: var(--drawer-size);
   }
 
   .drawer-start .drawer-panel {
@@ -71,13 +71,13 @@
     inset-inline-end: auto;
     bottom: auto;
     inset-inline-start: 0;
-    width: var(--sgds-drawer-size);
+    width: var(--drawer-size);
     height: 100%;
   }
 
   .drawer-header {
     display: flex;
-    padding: var(--sgds-drawer-padding);
+    padding: var(--drawer-padding);
   }
 
   .drawer-title {
@@ -95,8 +95,8 @@
     flex-wrap: wrap;
     justify-content: end;
     cursor: pointer;
-    gap: var(--sgds-drawer-button-gap);
-    padding: 0 var(--sgds-drawer-padding);
+    gap: var(--drawer-button-gap);
+    padding: 0 var(--drawer-padding);
   }
 
   .drawer-header-actions .drawer-close {
@@ -108,18 +108,18 @@
   .drawer-body {
     flex: 1 1 auto;
     display: block;
-    padding: var(--sgds-drawer-padding);
+    padding: var(--drawer-padding);
     overflow: auto;
     -webkit-overflow-scrolling: touch;
   }
 
   .drawer-footer {
     text-align: right;
-    padding: var(--sgds-drawer-padding);
+    padding: var(--drawer-padding);
   }
 
   .drawer-footer ::slotted(sgds-button:not(:last-of-type)) {
-    margin-inline-end: var(--sgds-drawer-button-gap);
+    margin-inline-end: var(--drawer-button-gap);
   }
 
   .drawer:not(.drawer-has-footer) .drawer-footer {
@@ -133,7 +133,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    background-color: var(--sgds-drawer-overlay-background-color);
+    background-color: var(--drawer-overlay-background-color);
     pointer-events: all;
   }
 
