--- a/src/components/Stepper/sgds-stepper.scss
+++ b/src/components/Stepper/sgds-stepper.scss
@@ -1,28 +1,28 @@
 :host {
-  --sgds-stepper-theme-color: var(--sgds-primary);
-  --sgds-stepper-theme-hover-color: var(--sgds-primary-600);
-  --sgds-stepper-default-color: var(--sgds-gray-400);
+  --stepper-theme-color: var(--sgds-primary);
+  --stepper-theme-hover-color: var(--sgds-primary-600);
+  --stepper-default-color: var(--sgds-gray-400);
 }
 
 .sgds {
   &.stepper {
     .stepper-item {
       > .stepper-marker {
-        background-color: var(--sgds-stepper-default-color);
+        background-color: var(--stepper-default-color);
         border-color: var(--sgds-gray-100);
       }
       &.is-active {
         .stepper-marker {
           background-color: var(--sgds-gray-100);
-          border-color: var(--sgds-stepper-theme-color);
-          color: var(--sgds-stepper-theme-color);
+          border-color: var(--stepper-theme-color);
+          color: var(--stepper-theme-color);
         }
       }
 
       &.is-completed {
         .stepper-marker {
-          background-color: var(--sgds-stepper-theme-color);
-          border-color: var(--sgds-stepper-theme-color);
+          background-color: var(--stepper-theme-color);
+          border-color: var(--stepper-theme-color);
           color: var(--sgds-gray-100);
         }
       }
@@ -31,12 +31,12 @@
         &:hover {
           .stepper {
             &-marker {
-              background-color: var(--sgds-stepper-theme-hover-color);
-              border-color: var(--sgds-stepper-theme-hover-color);
+              background-color: var(--stepper-theme-hover-color);
+              border-color: var(--stepper-theme-hover-color);
             }
             &-detail {
               > * {
-                color: var(--sgds-stepper-theme-hover-color);
+                color: var(--stepper-theme-hover-color);
               }
             }
           }
@@ -44,7 +44,7 @@
       }
 
       &::before {
-        background: linear-gradient(270deg, var(--sgds-stepper-default-color) 50%, var(--sgds-stepper-theme-color) 0px)
+        background: linear-gradient(270deg, var(--stepper-default-color) 50%, var(--stepper-theme-color) 0px)
           100% 100% / 200% 100%;
       }
     }
