build(plop): update plop code generator

--- a/plop-templates/test.hbs
+++ b/plop-templates/test.hbs
@@ -1,7 +1,6 @@
 import { html } from "lit";
 import {expect } from "@open-wc/testing";
-import { Sgds{{main-component-name}} } from "../src/components/{{main-component-name}}";
-
-customElements.define("sgds-{{kebabCase main-component-name}}", Sgds{{main-component-name}});
+import { Sgds{{main-component-name}} } from "../src/components";
+import "../src/index";
 
 describe("<sgds-{{kebabCase main-component-name}}>", () => {});
