fix(alert): remove default svg vertical align stylings for alert
vertical align stylings coming from bootstrap reboot scss

--- a/src/components/Alert/sgds-alert.scss
+++ b/src/components/Alert/sgds-alert.scss
@@ -1,9 +1,11 @@
 :host {
   --alert-icon-margin-right: 0.5rem;
+ 
 }
 
 slot[name="icon"]::slotted(svg) {
   margin-right: var(--alert-icon-margin-right);
+  vertical-align: unset !important;
 }
 
 i {
