feat(datepicker): focusing active day when calendar shows

--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -43,6 +43,9 @@ td {
       color: var(--datepicker-theme-color);
       background-color: var(--datepicker-hover-bg-color);
     }
+    &.active:focus{
+      color: red;
+    }
   }
 }
 
