--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -16,7 +16,6 @@
   padding: 1rem 1rem 0;
 }
 
-
 button.month,
 button.year {
   padding: 0;
@@ -34,19 +33,22 @@ td {
   width: 3rem;
   height: 3rem;
   padding: 0;
-  &.disabled{
+  &.disabled {
     color: var(--sgds-gray-400);
   }
-  &[data-day]{
+  &[data-day] {
     &:hover:not(.disabled),
-    &.active{
+    &.active {
       color: var(--datepicker-theme-color);
       background-color: var(--datepicker-hover-bg-color);
     }
-    &.active:focus{
-      color: red;
+    // &.active:focus {
+    //   outline: rgba(170, 50, 220, 0.6) solid 2px;
+    //   border-radius: 2rem;
+    // }
+    &:focus {
+      outline: rgba(170, 50, 220, 0.6) solid 2px;
+      border-radius: 2rem;
     }
   }
 }
-
-
