feat(datepicker): see description
add missing show menu on first load logic

sync show menu on first load with calendar date focus

complete implementation of keyboard navigation on dates between months

--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -50,4 +50,7 @@ td {
       outline: var(--datepicker-theme-color) solid 2px;
     }
   }
+  &.focus {
+    outline: var(--datepicker-theme-color) solid 2px;
+  }
 }
