feat(datepicker): month and years keyboard nav

--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -27,6 +27,9 @@ button.year {
     color: var(--datepicker-theme-color);
     background-color: var(--datepicker-hover-bg-color);
   }
+  &:focus {
+    outline: var(--datepicker-theme-color) solid 2px;
+  }
 }
 
 td {
