refactor(datepicker): rendering of views

--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -42,7 +42,7 @@ td {
   &[data-day] {
     &:hover:not(.disabled),
     &.active {
-      color: var(--datepicker-theme-color);
+      // color: var(--datepicker-theme-color);
       background-color: var(--datepicker-hover-bg-color);
     }
     // &.active:focus {
