feat(datepicker): complete focus trap loop with tab keypress

--- a/src/components/Datepicker/datepicker-header.scss
+++ b/src/components/Datepicker/datepicker-header.scss
@@ -7,6 +7,9 @@
     color: var(--datepicker-theme-color);
     border: none;
     font-weight: bold;
+    &:focus {
+      outline: var(--datepicker-theme-color) solid 2px;
+    }
   }
 
   svg {
