test(datepicker): wip

--- a/src/components/Datepicker/datepicker-calendar.scss
+++ b/src/components/Datepicker/datepicker-calendar.scss
@@ -46,7 +46,7 @@ td {
       background-color: var(--datepicker-hover-bg-color);
     }
     &:focus {
-      outline: var(--datepicker-theme-color) solid 2px;
+      outline: var(--datepicker-theme-color) auto 2px;
     }
   }
 }
