--- a/src/components/Datepicker/sgds-datepicker.scss
+++ b/src/components/Datepicker/sgds-datepicker.scss
@@ -6,6 +6,8 @@
   --datepicker-closebutton-bg-color: var(--datepicker-theme-color);
   --datepicker-closebutton-hover-bg-color: var(--sgds-primary-600);
   --datepicker-closebutton-color: white;
+  --datepicker-selected-date-bg-color: var(--sgds-primary-600);
+  --datepicker-selected-date-text-color: white;
 }
 
 div {
