--- a/src/components/Datepicker/datepicker-header.scss
+++ b/src/components/Datepicker/datepicker-header.scss
@@ -3,6 +3,7 @@
   border: none;
   color: var(--datepicker-theme-color);
   button {
+    cursor: pointer;
     background-color: transparent;
     color: var(--datepicker-theme-color);
     border: none;
