refactor(datepicker): separate input mask component|

--- a/src/components/Datepicker/sgds-datepicker.scss
+++ b/src/components/Datepicker/sgds-datepicker.scss
@@ -18,7 +18,7 @@ div {
   background-color: var(--datepicker-bg-color);
 }
 
-sgds-input {
+sgds-datepicker-input {
   flex: 1;
   margin-right: 0; /* Remove the margin on the right */
 }
