feat(datepicker): a11y wip

--- a/src/components/Datepicker/datepicker-header.scss
+++ b/src/components/Datepicker/datepicker-header.scss
@@ -11,9 +11,14 @@
     &:focus {
       outline: var(--datepicker-theme-color) auto 2px;
     }
+    &.cursor-not-allowed {
+      cursor: not-allowed;
+    }
+    
   }
 
   svg {
     font-size: 10rem;
   }
 }
+
