refactor(button, radio, radiogroup, accordion): styling refactor

--- a/src/components/Button/sgds-button.scss
+++ b/src/components/Button/sgds-button.scss
@@ -1,3 +1,14 @@
+//
+// Variables
+//
+
+$btn-padding-x: .75rem;
+$btn-padding-y: .375rem;
+
 :host {
   display: inline-block;
 }
+
+//
+// Base styles
+//
