--- a/src/base/sgds-element.scss
+++ b/src/base/sgds-element.scss
@@ -1,5 +1,9 @@
-
-@import "~@govtechsg/sgds/sass/sgds.scss";
+// Configuration
+@charset "utf-8";
+@import "~@govtechsg/sgds/sass/functions";
+@import "~@govtechsg/sgds/sass/variables";
+@import "~@govtechsg/sgds/sass/mixins";
+@import "~@govtechsg/sgds/sass/utilities";
 
 $theme-colors-rgb: map-loop($theme-colors, to-rgb, "$value");
 //@debug $theme-colors-rgb;
@@ -10,44 +14,81 @@ $all-colors: map-merge-multiple($primarys, $secondarys, $successs, $infos, $dang
 $utilities: map-merge(
   $utilities,
   (
-    "color": map-merge(
-      map-get($utilities, "color"),
-      (
-        values: map-merge(
-          map-get(map-get($utilities, "color"), "values"),
-          (
-            $all-colors
-          ),
-        ),
-      ),
-    ),
+    "color":
+      map-merge(
+        map-get($utilities, "color"),
+        (
+          values: map-merge(map-get(map-get($utilities, "color"), "values"), ($all-colors))
+        )
+      )
   )
 );
 
+@import "~@govtechsg/sgds/sass/reboot";
+@import "~@govtechsg/sgds/sass/type";
+@import "~@govtechsg/sgds/sass/images";
+@import "~@govtechsg/sgds/sass/section";
+@import "~@govtechsg/sgds/sass/containers";
+@import "~@govtechsg/sgds/sass/grid";
+@import "~@govtechsg/sgds/sass/table";
+@import "~@govtechsg/sgds/sass/forms";
+@import "~@govtechsg/sgds/sass/footer";
+// @import "~@govtechsg/sgds/sass/buttons";
+@import "~@govtechsg/sgds/sass/transitions";
+@import "~@govtechsg/sgds/sass/datepicker";
+@import "~@govtechsg/sgds/sass/dropdown";
+@import "~@govtechsg/sgds/sass/fileupload";
+@import "~@govtechsg/sgds/sass/navbar";
+@import "~@govtechsg/sgds/sass/card";
+@import "~@govtechsg/sgds/sass/accordion";
+@import "~@govtechsg/sgds/sass/breadcrumb";
+@import "~@govtechsg/sgds/sass/pagination";
+@import "~@govtechsg/sgds/sass/list-group";
+@import "~@govtechsg/sgds/sass/badge";
+@import "~@govtechsg/sgds/sass/alert";
+@import "~@govtechsg/sgds/sass/progress";
+@import "~@govtechsg/sgds/sass/close";
+@import "~@govtechsg/sgds/sass/sidenav";
+@import "~@govtechsg/sgds/sass/stepper";
+@import "~@govtechsg/sgds/sass/toasts";
+@import "~@govtechsg/sgds/sass/modal";
+@import "~@govtechsg/sgds/sass/tabs";
+@import "~@govtechsg/sgds/sass/tooltip";
+@import "~@govtechsg/sgds/sass/popover";
+@import "~@govtechsg/sgds/sass/carousel";
+@import "~@govtechsg/sgds/sass/spinners";
+@import "~@govtechsg/sgds/sass/offcanvas";
+@import "~@govtechsg/sgds/sass/placeholders";
+@import "~@govtechsg/sgds/sass/combobox";
+//Helpers
+@import "~@govtechsg/sgds/sass/helpers";
+//Utilites
+@import "~@govtechsg/sgds/sass/utilities/api";
 
-:host {
-    font-family: var(--sgds-body-font-family, $font-family-sans-serif);
-    font-size: var(--sgds-body-font-size, $font-size-base);
-    font-weight: var(--sgds-body-font-weight, $font-weight-base);
-    line-height: var(--sgds-body-line-height, $line-height-base);
-    // Generates all rgb color declared in the $theme-colors from _variables.scss
-    @each $color, $value in $theme-colors-rgb {
-        --sgds-#{$color}-rgb : #{$value};
-    }
+@import "~@govtechsg/sgds/sass/templates";
+// :host {
+//   font-family: var(--sgds-body-font-family, $font-family-sans-serif);
+//   font-size: var(--sgds-body-font-size, $font-size-base);
+//   font-weight: var(--sgds-body-font-weight, $font-weight-base);
+//   line-height: var(--sgds-body-line-height, $line-height-base);
+//   // Generates all rgb color declared in the $theme-colors from _variables.scss
+//   @each $color, $value in $theme-colors-rgb {
+//     --sgds-#{$color}-rgb: #{$value};
+//   }
 
-    @each $color, $value in $theme-colors {
-        --sgds-#{$color} : #{$value};
-    }
+//   @each $color, $value in $theme-colors {
+//     --sgds-#{$color}: #{$value};
+//   }
 
-    @each $weight, $value in $grays {
-        --sgds-gray-#{$weight}: #{$value};
-    }
-    // populate primary colors custom variables
-    @each $weight, $value in $all-colors {
-        --sgds-#{$weight}: #{$value};
-    }
+//   @each $weight, $value in $grays {
+//     --sgds-gray-#{$weight}: #{$value};
+//   }
+//   // populate primary colors custom variables
+//   @each $weight, $value in $all-colors {
+//     --sgds-#{$weight}: #{$value};
+//   }
 
-    //shared variables with modal and drawer
-    --overlay-background-color:rgba(0,0,0,0.5);
-    --zindex-modal : #{$zindex-modal};
-}
+//   //shared variables with modal and drawer
+//   --overlay-background-color: rgba(0, 0, 0, 0.5);
+//   --zindex-modal: #{$zindex-modal};
+// }
