--- a/src/components/Button/sgds-button.scss
+++ b/src/components/Button/sgds-button.scss
@@ -1,14 +1,14 @@
-//
-// Variables
-//
+// //
+// // Variables
+// //
 
-$btn-padding-x: .75rem;
-$btn-padding-y: .375rem;
+// $btn-padding-x: .75rem;
+// $btn-padding-y: .375rem;
 
-:host {
-  display: inline-block;
-}
+// :host {
+//   display: inline-block;
+// }
 
-//
-// Base styles
-//
+// //
+// // Base styles
+// //
