--- a/src/components/Alert/sgds-alert-link.scss
+++ b/src/components/Alert/sgds-alert-link.scss
@@ -1,10 +1,10 @@
-:host {
-  --alert-link-anchor-color: #2a3343;
-}
-.alert-link {
-  color: var(--alert-link-anchor-color);
-  cursor: pointer;
-  &:hover {
-    color: var(--alert-link-anchor-color);
-  }
-}
+// :host {
+//   --alert-link-anchor-color: #2a3343;
+// }
+// // .alert-link {
+// //   color: var(--alert-link-anchor-color);
+// //   cursor: pointer;
+// //   &:hover {
+// //     color: var(--alert-link-anchor-color);
+// //   }
+// // }
