--- a/src/components/Datepicker/datepicker-header.scss
+++ b/src/components/Datepicker/datepicker-header.scss
@@ -11,14 +11,15 @@
     &:focus {
       outline: var(--datepicker-theme-color) auto 2px;
     }
-    &.cursor-not-allowed {
+    &.disabled {
       cursor: not-allowed;
     }
-    
+    &:hover:not(.disabled) {
+      background-color: var(--datepicker-hover-bg-color);
+    }
   }
 
   svg {
     font-size: 10rem;
   }
 }
-
