refactor(badge): replace badge styles

--- a/root.css
+++ b/root.css
@@ -1,45 +1,123 @@
 :root,
 [data-bs-theme="light"] {
-  --sgds-blue: #0950df;
-  --sgds-indigo: #6610f2;
-  --sgds-purple: #5942db;
-  --sgds-pink: #d63384;
-  --sgds-red: #b6220d;
-  --sgds-orange: #fd7e14;
-  --sgds-yellow: #88500d;
-  --sgds-green: #066e0e;
-  --sgds-teal: #20c997;
-  --sgds-cyan: #0a6679;
-  --sgds-black: #000;
-  --sgds-white: #fff;
-  --sgds-gray: #5d5d5d;
-  --sgds-gray-dark: #252525;
-  --sgds-gray-100: #f7f7f7;
-  --sgds-gray-200: #d6d6d6;
-  --sgds-gray-300: #b1b1b1;
-  --sgds-gray-400: #909090;
-  --sgds-gray-500: #757575;
-  --sgds-gray-600: #5d5d5d;
-  --sgds-gray-700: #3f3f3f;
-  --sgds-gray-800: #252525;
-  --sgds-gray-900: #111;
-  --sgds-primary: #5942db;
-  --sgds-secondary: #0a6679;
-  --sgds-success: #066e0e;
-  --sgds-info: #0950df;
-  --sgds-warning: #88500d;
-  --sgds-danger: #b6220d;
-  --sgds-light: #b1b1b1;
-  --sgds-dark: #252525;
-  --sgds-primary-rgb: 89, 66, 219;
-  --sgds-secondary-rgb: 10, 102, 121;
-  --sgds-success-rgb: 6, 110, 14;
-  --sgds-info-rgb: 9, 80, 223;
-  --sgds-warning-rgb: 136, 80, 13;
-  --sgds-danger-rgb: 182, 34, 13;
-  --sgds-light-rgb: 177, 177, 177;
-  --sgds-dark-rgb: 37, 37, 37;
-  --sgds-primary-text-emphasis: #5942db;
+  --sgds-gray-100-rgb: 234, 234, 234;
+  --sgds-gray-200-rgb: 210, 210, 210;
+  --sgds-gray-300-rgb: 178, 178, 178;
+  --sgds-gray-400-rgb: 147, 147, 147;
+  --sgds-gray-500-rgb: 117, 117, 117;
+  --sgds-gray-600-rgb: 89, 89, 89;
+  --sgds-gray-700-rgb: 62, 62, 62;
+  --sgds-gray-800-rgb: 37, 37, 37;
+  --sgds-gray-900-rgb: 14, 14, 14;
+  --sgds-primary-100: #EAE8FF;
+  --sgds-primary-100-rgb: 234, 232, 255;
+  --sgds-primary-200: #D1CEFF;
+  --sgds-primary-200-rgb: 209, 206, 255;
+  --sgds-primary-300: #B1ACFF;
+  --sgds-primary-300-rgb: 177, 172, 255;
+  --sgds-primary-400: #9288F0;
+  --sgds-primary-400-rgb: 146, 136, 240;
+  --sgds-primary-500: #7562E2;
+  --sgds-primary-500-rgb: 117, 98, 226;
+  --sgds-primary-600: #5A42C0;
+  --sgds-primary-600-rgb: 90, 66, 192;
+  --sgds-primary-700: #42209F;
+  --sgds-primary-700-rgb: 66, 32, 159;
+  --sgds-primary-800: #2D007E;
+  --sgds-primary-800-rgb: 45, 0, 126;
+  --sgds-primary-900: #1C005E;
+  --sgds-primary-900-rgb: 28, 0, 94;
+  --sgds-secondary-100: #C8F1F9;
+  --sgds-secondary-100-rgb: 200, 241, 249;
+  --sgds-secondary-200: #ABD9E2;
+  --sgds-secondary-200-rgb: 171, 217, 226;
+  --sgds-secondary-300: #85BBC5;
+  --sgds-secondary-300-rgb: 133, 187, 197;
+  --sgds-secondary-400: #5B9DA9;
+  --sgds-secondary-400-rgb: 91, 157, 169;
+  --sgds-secondary-500: #228190;
+  --sgds-secondary-500-rgb: 34, 129, 144;
+  --sgds-secondary-600: #006472;
+  --sgds-secondary-600-rgb: 0, 100, 114;
+  --sgds-secondary-700: #004755;
+  --sgds-secondary-700-rgb: 0, 71, 85;
+  --sgds-secondary-800: #002C3A;
+  --sgds-secondary-800-rgb: 0, 44, 58;
+  --sgds-secondary-900: #001321;
+  --sgds-secondary-900-rgb: 0, 19, 33;
+  --sgds-success-100: #C2F5BF;
+  --sgds-success-100-rgb: 194, 245, 191;
+  --sgds-success-200: #A5DFA1;
+  --sgds-success-200-rgb: 165, 223, 161;
+  --sgds-success-300: #7EC17A;
+  --sgds-success-300-rgb: 126, 193, 122;
+  --sgds-success-400: #53A450;
+  --sgds-success-400-rgb: 83, 164, 80;
+  --sgds-success-500: #088912;
+  --sgds-success-500-rgb: 8, 137, 18;
+  --sgds-success-600: #006B00;
+  --sgds-success-600-rgb: 0, 107, 0;
+  --sgds-success-700: #004D00;
+  --sgds-success-700-rgb: 0, 77, 0;
+  --sgds-success-800: #003100;
+  --sgds-success-800-rgb: 0, 49, 0;
+  --sgds-success-900: #001600;
+  --sgds-success-900-rgb: 0, 22, 0;
+  --sgds-info-100: #C5F0FF;
+  --sgds-info-100-rgb: 197, 240, 255;
+  --sgds-info-200: #A7D6FF;
+  --sgds-info-200-rgb: 167, 214, 255;
+  --sgds-info-300: #7FB5FF;
+  --sgds-info-300-rgb: 127, 181, 255;
+  --sgds-info-400: #5592FF;
+  --sgds-info-400-rgb: 85, 146, 255;
+  --sgds-info-500: #216BFF;
+  --sgds-info-500-rgb: 33, 107, 255;
+  --sgds-info-600: #0049DC;
+  --sgds-info-600-rgb: 0, 73, 220;
+  --sgds-info-700: #0022B9;
+  --sgds-info-700-rgb: 0, 34, 185;
+  --sgds-info-800: #000097;
+  --sgds-info-800-rgb: 0, 0, 151;
+  --sgds-info-900: #130075;
+  --sgds-info-900-rgb: 19, 0, 117;
+  --sgds-warning-100: #FFE6C6;
+  --sgds-warning-100-rgb: 255, 230, 198;
+  --sgds-warning-200: #F3CDA8;
+  --sgds-warning-200-rgb: 243, 205, 168;
+  --sgds-warning-300: #D7AB81;
+  --sgds-warning-300-rgb: 215, 171, 129;
+  --sgds-warning-400: #BC8A57;
+  --sgds-warning-400-rgb: 188, 138, 87;
+  --sgds-warning-500: #A5681F;
+  --sgds-warning-500-rgb: 165, 104, 31;
+  --sgds-warning-600: #864B00;
+  --sgds-warning-600-rgb: 134, 75, 0;
+  --sgds-warning-700: #672F00;
+  --sgds-warning-700-rgb: 103, 47, 0;
+  --sgds-warning-800: #491200;
+  --sgds-warning-800-rgb: 73, 18, 0;
+  --sgds-warning-900: #2D0000;
+  --sgds-warning-900-rgb: 45, 0, 0;
+  --sgds-danger-100: #FFDAC8;
+  --sgds-danger-100-rgb: 255, 218, 200;
+  --sgds-danger-200: #FFBDAA;
+  --sgds-danger-200-rgb: 255, 189, 170;
+  --sgds-danger-300: #FF9782;
+  --sgds-danger-300-rgb: 255, 151, 130;
+  --sgds-danger-400: #F06E57;
+  --sgds-danger-400-rgb: 240, 110, 87;
+  --sgds-danger-500: #DD361C;
+  --sgds-danger-500-rgb: 221, 54, 28;
+  --sgds-danger-600: #B90000;
+  --sgds-danger-600-rgb: 185, 0, 0;
+  --sgds-danger-700: #950000;
+  --sgds-danger-700-rgb: 149, 0, 0;
+  --sgds-danger-800: #720000;
+  --sgds-danger-800-rgb: 114, 0, 0;
+  --sgds-danger-900: #4F0000;
+  --sgds-danger-900-rgb: 79, 0, 0;
+  /* --sgds-primary-text-emphasis: #5942db;
   --sgds-secondary-text-emphasis: #0a6679;
   --sgds-success-text-emphasis: #066e0e;
   --sgds-info-text-emphasis: #0950df;
@@ -64,7 +142,7 @@
   --sgds-light-border-subtle: #909090;
   --sgds-dark-border-subtle: #111;
   --sgds-white-rgb: 255, 255, 255;
-  --sgds-black-rgb: 0, 0, 0;
+  --sgds-black-rgb: 0, 0, 0; */
   --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
     "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
