--- a/src/components/Footer/sgds-footer.scss
+++ b/src/components/Footer/sgds-footer.scss
@@ -1,7 +1,7 @@
-a[target="_blank"]::after{
-    content: none;
-}
+// a[target="_blank"]::after{
+//     content: none;
+// }
 
-a[target="_blank"] > svg {
-    vertical-align: text-top;
-}
+// a[target="_blank"] > svg {
+//     vertical-align: text-top;
+// }
