--- a/src/components/Input/sgds-input.scss
+++ b/src/components/Input/sgds-input.scss
@@ -1,6 +1,6 @@
-.form {
-  &-label,
-  &-text {
-    line-height: var(--sgds-body-line-height);
-  }
-}
+// .form {
+//   &-label,
+//   &-text {
+//     line-height: var(--sgds-body-line-height);
+//   }
+// }
