--- a/src/components/Datepicker/sgds-datepicker.scss
+++ b/src/components/Datepicker/sgds-datepicker.scss
@@ -1,7 +1,6 @@
-
 :host {
-  --datepicker-theme-color: var(--sgds-primary);
-  --datepicker-hover-bg-color:  var(--sgds-primary-100);
+  --datepicker-theme-color: var(--sgds-primary-500);
+  --datepicker-hover-bg-color: var(--sgds-primary-100);
   --datepicker-bg-color: white;
   --datepicker-closebutton-bg-color: var(--datepicker-theme-color);
   --datepicker-closebutton-hover-bg-color: var(--sgds-primary-600);
@@ -14,7 +13,8 @@ div {
   display: flex;
 }
 
-button {
+button
+{
   align-self: self-start;
 }
 .datepicker {
@@ -24,12 +24,13 @@ button {
 sgds-datepicker-input {
   flex: 1;
   margin-right: 0; /* Remove the margin on the right */
+  --input-border-radius: var(--sgds-border-radius, 0.3125rem) 0 0 var(--sgds-border-radius, 0.3125rem);
 }
 
 .reset-btn {
   background-color: var(--datepicker-closebutton-bg-color);
   color: var(--datepicker-closebutton-color);
-  
+
   &:hover {
     color: var(--datepicker-closebutton-color);
     background-color: var(--datepicker-closebutton-hover-bg-color);
