--- a/root.css
+++ b/root.css
@@ -1,124 +1,45 @@
 :root,
 [data-bs-theme="light"] {
-  --sgds-gutter-x: 1.5rem;
-  --sgds-gray-100-rgb: 234, 234, 234;
-  --sgds-gray-200-rgb: 210, 210, 210;
-  --sgds-gray-300-rgb: 178, 178, 178;
-  --sgds-gray-400-rgb: 147, 147, 147;
-  --sgds-gray-500-rgb: 117, 117, 117;
-  --sgds-gray-600-rgb: 89, 89, 89;
-  --sgds-gray-700-rgb: 62, 62, 62;
-  --sgds-gray-800-rgb: 37, 37, 37;
-  --sgds-gray-900-rgb: 14, 14, 14;
-  --sgds-primary-100: #EAE8FF;
-  --sgds-primary-100-rgb: 234, 232, 255;
-  --sgds-primary-200: #D1CEFF;
-  --sgds-primary-200-rgb: 209, 206, 255;
-  --sgds-primary-300: #B1ACFF;
-  --sgds-primary-300-rgb: 177, 172, 255;
-  --sgds-primary-400: #9288F0;
-  --sgds-primary-400-rgb: 146, 136, 240;
-  --sgds-primary-500: #7562E2;
-  --sgds-primary-500-rgb: 117, 98, 226;
-  --sgds-primary-600: #5A42C0;
-  --sgds-primary-600-rgb: 90, 66, 192;
-  --sgds-primary-700: #42209F;
-  --sgds-primary-700-rgb: 66, 32, 159;
-  --sgds-primary-800: #2D007E;
-  --sgds-primary-800-rgb: 45, 0, 126;
-  --sgds-primary-900: #1C005E;
-  --sgds-primary-900-rgb: 28, 0, 94;
-  --sgds-secondary-100: #C8F1F9;
-  --sgds-secondary-100-rgb: 200, 241, 249;
-  --sgds-secondary-200: #ABD9E2;
-  --sgds-secondary-200-rgb: 171, 217, 226;
-  --sgds-secondary-300: #85BBC5;
-  --sgds-secondary-300-rgb: 133, 187, 197;
-  --sgds-secondary-400: #5B9DA9;
-  --sgds-secondary-400-rgb: 91, 157, 169;
-  --sgds-secondary-500: #228190;
-  --sgds-secondary-500-rgb: 34, 129, 144;
-  --sgds-secondary-600: #006472;
-  --sgds-secondary-600-rgb: 0, 100, 114;
-  --sgds-secondary-700: #004755;
-  --sgds-secondary-700-rgb: 0, 71, 85;
-  --sgds-secondary-800: #002C3A;
-  --sgds-secondary-800-rgb: 0, 44, 58;
-  --sgds-secondary-900: #001321;
-  --sgds-secondary-900-rgb: 0, 19, 33;
-  --sgds-success-100: #C2F5BF;
-  --sgds-success-100-rgb: 194, 245, 191;
-  --sgds-success-200: #A5DFA1;
-  --sgds-success-200-rgb: 165, 223, 161;
-  --sgds-success-300: #7EC17A;
-  --sgds-success-300-rgb: 126, 193, 122;
-  --sgds-success-400: #53A450;
-  --sgds-success-400-rgb: 83, 164, 80;
-  --sgds-success-500: #088912;
-  --sgds-success-500-rgb: 8, 137, 18;
-  --sgds-success-600: #006B00;
-  --sgds-success-600-rgb: 0, 107, 0;
-  --sgds-success-700: #004D00;
-  --sgds-success-700-rgb: 0, 77, 0;
-  --sgds-success-800: #003100;
-  --sgds-success-800-rgb: 0, 49, 0;
-  --sgds-success-900: #001600;
-  --sgds-success-900-rgb: 0, 22, 0;
-  --sgds-info-100: #C5F0FF;
-  --sgds-info-100-rgb: 197, 240, 255;
-  --sgds-info-200: #A7D6FF;
-  --sgds-info-200-rgb: 167, 214, 255;
-  --sgds-info-300: #7FB5FF;
-  --sgds-info-300-rgb: 127, 181, 255;
-  --sgds-info-400: #5592FF;
-  --sgds-info-400-rgb: 85, 146, 255;
-  --sgds-info-500: #216BFF;
-  --sgds-info-500-rgb: 33, 107, 255;
-  --sgds-info-600: #0049DC;
-  --sgds-info-600-rgb: 0, 73, 220;
-  --sgds-info-700: #0022B9;
-  --sgds-info-700-rgb: 0, 34, 185;
-  --sgds-info-800: #000097;
-  --sgds-info-800-rgb: 0, 0, 151;
-  --sgds-info-900: #130075;
-  --sgds-info-900-rgb: 19, 0, 117;
-  --sgds-warning-100: #FFE6C6;
-  --sgds-warning-100-rgb: 255, 230, 198;
-  --sgds-warning-200: #F3CDA8;
-  --sgds-warning-200-rgb: 243, 205, 168;
-  --sgds-warning-300: #D7AB81;
-  --sgds-warning-300-rgb: 215, 171, 129;
-  --sgds-warning-400: #BC8A57;
-  --sgds-warning-400-rgb: 188, 138, 87;
-  --sgds-warning-500: #A5681F;
-  --sgds-warning-500-rgb: 165, 104, 31;
-  --sgds-warning-600: #864B00;
-  --sgds-warning-600-rgb: 134, 75, 0;
-  --sgds-warning-700: #672F00;
-  --sgds-warning-700-rgb: 103, 47, 0;
-  --sgds-warning-800: #491200;
-  --sgds-warning-800-rgb: 73, 18, 0;
-  --sgds-warning-900: #2D0000;
-  --sgds-warning-900-rgb: 45, 0, 0;
-  --sgds-danger-100: #FFDAC8;
-  --sgds-danger-100-rgb: 255, 218, 200;
-  --sgds-danger-200: #FFBDAA;
-  --sgds-danger-200-rgb: 255, 189, 170;
-  --sgds-danger-300: #FF9782;
-  --sgds-danger-300-rgb: 255, 151, 130;
-  --sgds-danger-400: #F06E57;
-  --sgds-danger-400-rgb: 240, 110, 87;
-  --sgds-danger-500: #DD361C;
-  --sgds-danger-500-rgb: 221, 54, 28;
-  --sgds-danger-600: #B90000;
-  --sgds-danger-600-rgb: 185, 0, 0;
-  --sgds-danger-700: #950000;
-  --sgds-danger-700-rgb: 149, 0, 0;
-  --sgds-danger-800: #720000;
-  --sgds-danger-800-rgb: 114, 0, 0;
-  --sgds-danger-900: #4F0000;
-  --sgds-danger-900-rgb: 79, 0, 0;
-  /* --sgds-primary-text-emphasis: #5942db;
+  --sgds-blue: #0950df;
+  --sgds-indigo: #6610f2;
+  --sgds-purple: #5942db;
+  --sgds-pink: #d63384;
+  --sgds-red: #b6220d;
+  --sgds-orange: #fd7e14;
+  --sgds-yellow: #88500d;
+  --sgds-green: #066e0e;
+  --sgds-teal: #20c997;
+  --sgds-cyan: #0a6679;
+  --sgds-black: #000;
+  --sgds-white: #fff;
+  --sgds-gray: #5d5d5d;
+  --sgds-gray-dark: #252525;
+  --sgds-gray-100: #f7f7f7;
+  --sgds-gray-200: #d6d6d6;
+  --sgds-gray-300: #b1b1b1;
+  --sgds-gray-400: #909090;
+  --sgds-gray-500: #757575;
+  --sgds-gray-600: #5d5d5d;
+  --sgds-gray-700: #3f3f3f;
+  --sgds-gray-800: #252525;
+  --sgds-gray-900: #111;
+  --sgds-primary: #5942db;
+  --sgds-secondary: #0a6679;
+  --sgds-success: #066e0e;
+  --sgds-info: #0950df;
+  --sgds-warning: #88500d;
+  --sgds-danger: #b6220d;
+  --sgds-light: #b1b1b1;
+  --sgds-dark: #252525;
+  --sgds-primary-rgb: 89, 66, 219;
+  --sgds-secondary-rgb: 10, 102, 121;
+  --sgds-success-rgb: 6, 110, 14;
+  --sgds-info-rgb: 9, 80, 223;
+  --sgds-warning-rgb: 136, 80, 13;
+  --sgds-danger-rgb: 182, 34, 13;
+  --sgds-light-rgb: 177, 177, 177;
+  --sgds-dark-rgb: 37, 37, 37;
+  --sgds-primary-text-emphasis: #5942db;
   --sgds-secondary-text-emphasis: #0a6679;
   --sgds-success-text-emphasis: #066e0e;
   --sgds-info-text-emphasis: #0950df;
@@ -143,11 +64,17 @@
   --sgds-light-border-subtle: #909090;
   --sgds-dark-border-subtle: #111;
   --sgds-white-rgb: 255, 255, 255;
-  --sgds-black-rgb: 0, 0, 0; */
-  --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans",
-    "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
-  --sgds-gradient: linear-gradient(180deg, hsla(0, 0%, 100%, 0.15), hsla(0, 0%, 100%, 0));
+  --sgds-black-rgb: 0, 0, 0;
+  --sgds-font-sans-serif: "Inter", system-ui, -apple-system, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif,
+    "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  --sgds-font-monospace: SFMono-Regular, Menlo, Monaco, Consolas,
+    "Liberation Mono", "Courier New", monospace;
+  --sgds-gradient: linear-gradient(
+    180deg,
+    hsla(0, 0%, 100%, 0.15),
+    hsla(0, 0%, 100%, 0)
+  );
   --sgds-body-font-family: var(--sgds-font-sans-serif);
   --sgds-body-font-size: 1rem;
   --sgds-body-font-weight: 400;
@@ -199,61 +126,60 @@
   --sgds-form-invalid-border-color: #b6220d;
 }
 [data-bs-theme="dark"] {
-  --sgds-body-color: #dbdbdb;
-  --sgds-body-color-rgb: 219, 219, 219;
-  --sgds-body-bg: #0c0c0c;
-  --sgds-body-bg-rgb: 12, 12, 12;
+  --sgds-body-color: #d6d6d6;
+  --sgds-body-color-rgb: 214, 214, 214;
+  --sgds-body-bg: #111;
+  --sgds-body-bg-rgb: 17, 17, 17;
   --sgds-emphasis-color: #fff;
   --sgds-emphasis-color-rgb: 255, 255, 255;
-  --sgds-secondary-color: hsla(0, 0%, 86%, 0.75);
-  --sgds-secondary-color-rgb: 219, 219, 219;
-  --sgds-secondary-bg: #2a2a2a;
-  --sgds-secondary-bg-rgb: 42, 42, 42;
-  --sgds-tertiary-color: hsla(0, 0%, 86%, 0.5);
-  --sgds-tertiary-color-rgb: 219, 219, 219;
+  --sgds-secondary-color: hsla(0, 0%, 84%, 0.75);
+  --sgds-secondary-color-rgb: 214, 214, 214;
+  --sgds-secondary-bg: #252525;
+  --sgds-secondary-bg-rgb: 37, 37, 37;
+  --sgds-tertiary-color: hsla(0, 0%, 84%, 0.5);
+  --sgds-tertiary-color-rgb: 214, 214, 214;
   --sgds-tertiary-bg: #1b1b1b;
   --sgds-tertiary-bg-rgb: 27, 27, 27;
-  --sgds-primary-text-emphasis: #b8aef0;
-  --sgds-secondary-text-emphasis: #65c5ca;
-  --sgds-success-text-emphasis: #5ecd67;
-  --sgds-info-text-emphasis: #93b6ff;
-  --sgds-warning-text-emphasis: #d1b18b;
-  --sgds-danger-text-emphasis: #fd9d85;
-  --sgds-light-text-emphasis: #f2f2f2;
-  --sgds-dark-text-emphasis: #b6b6b6;
-  --sgds-primary-bg-subtle: #0c091d;
-  --sgds-secondary-bg-subtle: #010e10;
-  --sgds-success-bg-subtle: #010e02;
-  --sgds-info-bg-subtle: #010b1e;
-  --sgds-warning-bg-subtle: #110a02;
-  --sgds-danger-bg-subtle: #190502;
-  --sgds-light-bg-subtle: #dbdbdb;
-  --sgds-dark-bg-subtle: #2a2a2a;
-  --sgds-primary-border-subtle: #b8aef0;
-  --sgds-secondary-border-subtle: #65c5ca;
-  --sgds-success-border-subtle: #5ecd67;
-  --sgds-info-border-subtle: #93b6ff;
-  --sgds-warning-border-subtle: #d1b18b;
-  --sgds-danger-border-subtle: #fd9d85;
-  --sgds-light-border-subtle: #b6b6b6;
-  --sgds-dark-border-subtle: #2a2a2a;
+  --sgds-primary-text-emphasis: #b3a8ef;
+  --sgds-secondary-text-emphasis: #5fc0c5;
+  --sgds-success-text-emphasis: #52c85b;
+  --sgds-info-text-emphasis: #8ab1ff;
+  --sgds-warning-text-emphasis: #cdac83;
+  --sgds-danger-text-emphasis: #fd957b;
+  --sgds-light-text-emphasis: #f7f7f7;
+  --sgds-dark-text-emphasis: #b1b1b1;
+  --sgds-primary-bg-subtle: #120d2b;
+  --sgds-secondary-bg-subtle: #021418;
+  --sgds-success-bg-subtle: #011603;
+  --sgds-info-bg-subtle: #02102e;
+  --sgds-warning-bg-subtle: #1a1002;
+  --sgds-danger-bg-subtle: #270703;
+  --sgds-light-bg-subtle: #d6d6d6;
+  --sgds-dark-bg-subtle: #252525;
+  --sgds-primary-border-subtle: #b3a8ef;
+  --sgds-secondary-border-subtle: #5fc0c5;
+  --sgds-success-border-subtle: #52c85b;
+  --sgds-info-border-subtle: #8ab1ff;
+  --sgds-warning-border-subtle: #cdac83;
+  --sgds-danger-border-subtle: #fd957b;
+  --sgds-light-border-subtle: #b1b1b1;
+  --sgds-dark-border-subtle: #252525;
   --sgds-heading-color: inherit;
-  --sgds-link-color: #528bff;
-  --sgds-link-hover-color: #93b6ff;
-  --sgds-link-color-rgb: 82, 139, 255;
-  --sgds-link-hover-color-rgb: 147, 182, 255;
+  --sgds-link-color: #538cff;
+  --sgds-link-hover-color: #8ab1ff;
+  --sgds-link-color-rgb: 83, 140, 255;
+  --sgds-link-hover-color-rgb: 138, 177, 255;
   --sgds-code-color: #e685b5;
-  --sgds-highlight-color: #dbdbdb;
-  --sgds-highlight-bg: #3c2406;
-  --sgds-border-color: #8f8f8f;
+  --sgds-highlight-color: #d6d6d6;
+  --sgds-highlight-bg: #372005;
+  --sgds-border-color: #909090;
   --sgds-border-color-translucent: hsla(0, 0%, 100%, 0.15);
-  --sgds-form-valid-color: #5ecd67;
-  --sgds-form-valid-border-color: #5ecd67;
-  --sgds-form-invalid-color: #fd9d85;
-  --sgds-form-invalid-border-color: #fd9d85;
+  --sgds-form-valid-color: #52c85b;
+  --sgds-form-valid-border-color: #52c85b;
+  --sgds-form-invalid-color: #fd957b;
+  --sgds-form-invalid-border-color: #fd957b;
 }
-:root,
-[data-bs-theme="light"] {
+:root {
   --sgds-gray-100-rgb: 247, 247, 247;
   --sgds-gray-200-rgb: 214, 214, 214;
   --sgds-gray-300-rgb: 177, 177, 177;
@@ -373,154 +299,51 @@
   --sgds-danger-900-rgb: 39, 7, 3;
 }
 [data-bs-theme="dark"] {
-  --sgds-primary-100: #f2f1fc;
-  --sgds-primary-100-rgb: 242, 241, 252;
-  --sgds-primary-200: #dcd8f8;
-  --sgds-primary-200-rgb: 220, 216, 248;
-  --sgds-primary-300: #b8aef0;
-  --sgds-primary-300-rgb: 184, 174, 240;
-  --sgds-primary-400: #9181e8;
-  --sgds-primary-400-rgb: 145, 129, 232;
-  --sgds-primary-500: #7461e2;
-  --sgds-primary-500-rgb: 116, 97, 226;
-  --sgds-primary-600: #5841da;
-  --sgds-primary-600-rgb: 88, 65, 218;
-  --sgds-primary-700: #40309f;
-  --sgds-primary-700-rgb: 64, 48, 159;
-  --sgds-primary-800: #281e63;
-  --sgds-primary-800-rgb: 40, 30, 99;
-  --sgds-primary-900: #0c091d;
-  --sgds-primary-900-rgb: 12, 9, 29;
-  --sgds-secondary-100: #daf8f8;
-  --sgds-secondary-100-rgb: 218, 248, 248;
-  --sgds-secondary-200: #94eaea;
-  --sgds-secondary-200-rgb: 148, 234, 234;
-  --sgds-secondary-300: #65c5ca;
-  --sgds-secondary-300-rgb: 101, 197, 202;
-  --sgds-secondary-400: #41a1ab;
-  --sgds-secondary-400-rgb: 65, 161, 171;
-  --sgds-secondary-500: #21808f;
-  --sgds-secondary-500-rgb: 33, 128, 143;
-  --sgds-secondary-600: #0a6679;
-  --sgds-secondary-600-rgb: 10, 102, 121;
-  --sgds-secondary-700: #074a58;
-  --sgds-secondary-700-rgb: 7, 74, 88;
-  --sgds-secondary-800: #042e36;
-  --sgds-secondary-800-rgb: 4, 46, 54;
-  --sgds-secondary-900: #010e10;
-  --sgds-secondary-900-rgb: 1, 14, 16;
-  --sgds-success-100: #e5f7e6;
-  --sgds-success-100-rgb: 229, 247, 230;
-  --sgds-success-200: #b6e8b9;
-  --sgds-success-200-rgb: 182, 232, 185;
-  --sgds-success-300: #5ecd67;
-  --sgds-success-300-rgb: 94, 205, 103;
-  --sgds-success-400: #09a716;
-  --sgds-success-400-rgb: 9, 167, 22;
-  --sgds-success-500: #088812;
-  --sgds-success-500-rgb: 8, 136, 18;
-  --sgds-success-600: #066d0e;
-  --sgds-success-600-rgb: 6, 109, 14;
-  --sgds-success-700: #044f0a;
-  --sgds-success-700-rgb: 4, 79, 10;
-  --sgds-success-800: #033106;
-  --sgds-success-800-rgb: 3, 49, 6;
-  --sgds-success-900: #010e02;
-  --sgds-success-900-rgb: 1, 14, 2;
-  --sgds-info-100: #ecf3ff;
-  --sgds-info-100-rgb: 236, 243, 255;
-  --sgds-info-200: #cbdcff;
-  --sgds-info-200-rgb: 203, 220, 255;
-  --sgds-info-300: #93b6ff;
-  --sgds-info-300-rgb: 147, 182, 255;
-  --sgds-info-400: #528bff;
-  --sgds-info-400-rgb: 82, 139, 255;
-  --sgds-info-500: #2069ff;
-  --sgds-info-500-rgb: 32, 105, 255;
-  --sgds-info-600: #094fdf;
-  --sgds-info-600-rgb: 9, 79, 223;
-  --sgds-info-700: #063aa3;
-  --sgds-info-700-rgb: 6, 58, 163;
-  --sgds-info-800: #042566;
-  --sgds-info-800-rgb: 4, 37, 102;
-  --sgds-info-900: #010b1e;
-  --sgds-info-900-rgb: 1, 11, 30;
-  --sgds-warning-100: #f7f1eb;
-  --sgds-warning-100-rgb: 247, 241, 235;
-  --sgds-warning-200: #e9dac7;
-  --sgds-warning-200-rgb: 233, 218, 199;
-  --sgds-warning-300: #d1b18b;
-  --sgds-warning-300-rgb: 209, 177, 139;
-  --sgds-warning-400: #ba8b53;
-  --sgds-warning-400-rgb: 186, 139, 83;
-  --sgds-warning-500: #a5671d;
-  --sgds-warning-500-rgb: 165, 103, 29;
-  --sgds-warning-600: #88500d;
-  --sgds-warning-600-rgb: 136, 80, 13;
-  --sgds-warning-700: #633a09;
-  --sgds-warning-700-rgb: 99, 58, 9;
-  --sgds-warning-800: #3c2406;
-  --sgds-warning-800-rgb: 60, 36, 6;
-  --sgds-warning-900: #110a02;
-  --sgds-warning-900-rgb: 17, 10, 2;
-  --sgds-danger-100: #ffefea;
-  --sgds-danger-100-rgb: 255, 239, 234;
-  --sgds-danger-200: #fed1c6;
-  --sgds-danger-200-rgb: 254, 209, 198;
-  --sgds-danger-300: #fd9d85;
-  --sgds-danger-300-rgb: 253, 157, 133;
-  --sgds-danger-400: #ef6246;
-  --sgds-danger-400-rgb: 239, 98, 70;
-  --sgds-danger-500: #dc341b;
-  --sgds-danger-500-rgb: 220, 52, 27;
-  --sgds-danger-600: #b5220d;
-  --sgds-danger-600-rgb: 181, 34, 13;
-  --sgds-danger-700: #851909;
-  --sgds-danger-700-rgb: 133, 25, 9;
-  --sgds-danger-800: #541006;
-  --sgds-danger-800-rgb: 84, 16, 6;
-  --sgds-danger-900: #190502;
-  --sgds-danger-900-rgb: 25, 5, 2;
-  --sgds-primary: #9181e8;
-  --sgds-primary-rgb: 145, 129, 232;
-  --sgds-secondary: #41a1ab;
-  --sgds-secondary-rgb: 65, 161, 171;
-  --sgds-success: #09a716;
-  --sgds-success-rgb: 9, 167, 22;
-  --sgds-info: #528bff;
-  --sgds-info-rgb: 82, 139, 255;
-  --sgds-warning: #ba8b53;
-  --sgds-warning-rgb: 186, 139, 83;
-  --sgds-danger: #ef6246;
-  --sgds-danger-rgb: 239, 98, 70;
-  --sgds-light: #8f8f8f;
-  --sgds-light-rgb: 143, 143, 143;
-  --sgds-dark: #2a2a2a;
-  --sgds-dark-rgb: 42, 42, 42;
-  --sgds-primary-bg-dark: #9181e8;
-  --sgds-primary-bg-dark-rgb: 145, 129, 232;
-  --sgds-secondary-bg-dark: #41a1ab;
-  --sgds-secondary-bg-dark-rgb: 65, 161, 171;
+  --sgds-primary-bg-dark: #9182e8;
+  --sgds-primary-bg-dark-rgb: 145, 130, 232;
+  --sgds-secondary-bg-dark: #3d9da7;
+  --sgds-secondary-bg-dark-rgb: 61, 157, 167;
   --sgds-success-bg-dark: #09a716;
   --sgds-success-bg-dark-rgb: 9, 167, 22;
-  --sgds-info-bg-dark: #528bff;
-  --sgds-info-bg-dark-rgb: 82, 139, 255;
-  --sgds-warning-bg-dark: #ba8b53;
-  --sgds-warning-bg-dark-rgb: 186, 139, 83;
-  --sgds-danger-bg-dark: #ef6246;
-  --sgds-danger-bg-dark-rgb: 239, 98, 70;
-  --sgds-light-bg-dark: #8f8f8f;
-  --sgds-light-bg-dark-rgb: 143, 143, 143;
-  --sgds-dark-bg-dark: #2a2a2a;
-  --sgds-dark-bg-dark-rgb: 42, 42, 42;
-  --sgds-primary-bg-hover-dark: #b8aef0;
-  --sgds-secondary-bg-hover-dark: #65c5ca;
-  --sgds-success-bg-hover-dark: #5ecd67;
-  --sgds-info-bg-hover-dark: #93b6ff;
-  --sgds-warning-bg-hover-dark: #d1b18b;
-  --sgds-danger-bg-hover-dark: #fd9d85;
-  --sgds-light-bg-hover-dark: #b6b6b6;
-  --sgds-dark-bg-hover-dark: #434343;
+  --sgds-info-bg-dark: #538cff;
+  --sgds-info-bg-dark-rgb: 83, 140, 255;
+  --sgds-warning-bg-dark: #b7874c;
+  --sgds-warning-bg-dark-rgb: 183, 135, 76;
+  --sgds-danger-bg-dark: #ef6447;
+  --sgds-danger-bg-dark-rgb: 239, 100, 71;
+  --sgds-light-bg-dark: #909090;
+  --sgds-light-bg-dark-rgb: 144, 144, 144;
+  --sgds-dark-bg-dark: #252525;
+  --sgds-dark-bg-dark-rgb: 37, 37, 37;
+  --sgds-primary-bg-hover-dark: #b3a8ef;
+  --sgds-secondary-bg-hover-dark: #5fc0c5;
+  --sgds-success-bg-hover-dark: #52c85b;
+  --sgds-info-bg-hover-dark: #8ab1ff;
+  --sgds-warning-bg-hover-dark: #cdac83;
+  --sgds-danger-bg-hover-dark: #fd957b;
+  --sgds-light-bg-hover-dark: #b1b1b1;
+  --sgds-dark-bg-hover-dark: #3f3f3f;
   color-scheme: dark;
 }
-/*# sourceMappingURL=root.css.map*/
+*,
+:after,
+:before {
+  box-sizing: border-box;
+}
+@media (prefers-reduced-motion: no-preference) {
+  :root {
+    scroll-behavior: smooth;
+  }
+}
+body {
+  -webkit-text-size-adjust: 100%;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  background-color: var(--sgds-body-bg);
+  color: var(--sgds-body-color);
+  font-family: var(--sgds-body-font-family);
+  font-size: var(--sgds-body-font-size);
+  font-weight: var(--sgds-body-font-weight);
+  line-height: var(--sgds-body-line-height);
+  margin: 0;
+  text-align: var(--sgds-body-text-align);
+}
